--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost/contactdb
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=dev
 spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=create-drop
