--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile("org.hibernate:hibernate-validator")
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.0.RELEASE'
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.2.RELEASE'
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.16'
     testCompile("junit:junit")
 }
