--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.2.RELEASE'
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.16'
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-security")
     testCompile("junit:junit")
 }
 
