--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
 jar {
-    baseName = 'gs-serving-web-content'
+    baseName = 'gs-serving-hello.web-content'
     version =  '0.1.0'
 }
 
@@ -23,7 +23,7 @@ repositories {
 }
 
 springBoot {
-    mainClass = "Hello.Application"
+    mainClass = "hello.Application"
 }
 
 sourceCompatibility = 1.8
@@ -37,7 +37,6 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.2.RELEASE'
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.16'
-    compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-security")
     testCompile("junit:junit")
 }
