--- a/application.properties
+++ b/application.properties
@@ -3,4 +3,4 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=dev
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
